# Domain-Check.rs

./: .gitignore  Cargo.toml  README.md
Domain-Check.rs/: output.txt
src/: args.rs  main.rs  utils.rs
src/modules/: certsh.rs  certspotter_api.rs  dns.rs  historical_dns.rs  mod.rs
