[package]
name = "DNS-Check"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] } # Clean argument parsing
trust-dns-resolver = "0.23.2"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] } 